# statcan-wds

./: .gitignore  README.md  examples.ipynb  pyproject.toml
examples/: census_empl_income.yaml  census_lfs.yaml  cmhc.yaml  cpi_adjusted.yaml
statcan_wds/: __init__.py  cli.py  client.py  errors.py  fetch.py  metadata.py  resolver.py
